Grid of cubes now responds to the current audio track

--- a/AudioVisualizer/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AudioVisualizer/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Maps/Test
 
 [ModuleFileTracking]
-AudioVisualizer.TimeStamp=2020.12.30-19.32.03
+AudioVisualizer.TimeStamp=2020.12.30-21.27.21
 AudioVisualizer.LastCompileMethod=External
 PakFile.TimeStamp=2020.03.26-19.33.39
 PakFile.LastCompileMethod=Unknown
@@ -903,9 +903,9 @@ Level=E:/Repos/AudioVisualizer/Content/
 Project=C:/Program Files/Epic Games/UE_4.24/
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_EQControler
-MRUItem1=/Game/Blueprints/BP_Cube
-MRUItem2=/Game/Meshes/Cube
+MRUItem0=/Game/Meshes/Cube
+MRUItem1=/Game/Blueprints/BP_EQControler
+MRUItem2=/Game/Blueprints/BP_Cube
 MRUItem3=/Game/Meshes/Material
 MRUItem4=/Game/Meshes/419_2
 MRUItem5=/Game/Maps/Untitled
@@ -1286,6 +1286,9 @@ AudioComponent.AttenuationPluginSettings=True
 AudioComponent.Tags=True
 AudioComponent.Activation=True
 AudioComponent.Cooking=True
+BP_EQControler_C.Default=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1300,7 +1303,7 @@ RecentlyPlaced=/Game/Blueprints/BP_EQControler.BP_EQControler;
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_Cube.BP_Cube=0
-/Game/Meshes/Cube.Cube=1
+/Game/Meshes/Cube.Cube=0
 /Game/Meshes/Material.Material=1
 /Game/Blueprints/BP_EQControler.BP_EQControler=0
 
@@ -1403,7 +1406,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=MapCheck
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=False
