Adding an emissive material to make things look more interesting

--- a/AudioVisualizer/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/AudioVisualizer/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,7 +113,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Maps/Test
 
 [ModuleFileTracking]
-AudioVisualizer.TimeStamp=2020.12.30-21.27.21
+AudioVisualizer.TimeStamp=2020.12.30-21.44.03
 AudioVisualizer.LastCompileMethod=External
 PakFile.TimeStamp=2020.03.26-19.33.39
 PakFile.LastCompileMethod=Unknown
@@ -903,13 +903,15 @@ Level=E:/Repos/AudioVisualizer/Content/
 Project=C:/Program Files/Epic Games/UE_4.24/
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Meshes/Cube
-MRUItem1=/Game/Blueprints/BP_EQControler
-MRUItem2=/Game/Blueprints/BP_Cube
-MRUItem3=/Game/Meshes/Material
-MRUItem4=/Game/Meshes/419_2
-MRUItem5=/Game/Maps/Untitled
-MRUItem6=/Game/BP_Cube
+MRUItem0=/Game/Blueprints/BP_Cube
+MRUItem1=/Game/Materials/MI_Emissive
+MRUItem2=/Game/Materials/EmissiveBase
+MRUItem3=/Game/Blueprints/BP_EQControler
+MRUItem4=/Game/Meshes/Cube
+MRUItem5=/Game/Meshes/Material
+MRUItem6=/Game/Meshes/419_2
+MRUItem7=/Game/Maps/Untitled
+MRUItem8=/Game/BP_Cube
 
 [DetailCategories]
 BP_EQControler_C.Tick=True
@@ -1289,6 +1291,54 @@ AudioComponent.Cooking=True
 BP_EQControler_C.Default=True
 ArrayProperty.Variable=True
 ArrayProperty.DefaultValueCategory=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionSine.MaterialExpressionSine=True
+MaterialExpressionSine.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Sun=True
+AtmosphericFog.Ground=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Activation=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Activation=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Replication=True
+SphereReflectionCapture.Input=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1406,7 +1456,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Material=False
